--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <a class="logo" href="">Web<span class="logo__black">Studio</span></a>
 
         <ul class="list">
-          <li class="list__item"><a class="nav__link" href="./index.html">Студія</a></li>
-          <li class="list__item"><a class="nav__link nav__link--current" href="./portfolio.html">Портфоліо</a></li>
+          <li class="list__item"><a class="nav__link nav__link--current" href="./index.html">Студія</a></li>
+          <li class="list__item"><a class="nav__link " href="./portfolio.html">Портфоліо</a></li>
           <li class="list__item"><a class="nav__link" href="">Контакти</a></li>
         </ul>
       </nav>
