--- a/portfolio.html
+++ b/portfolio.html
@@ -478,57 +478,59 @@
 
       <div class="footer__block-flex">
 
-        <div class="footer__block-logo-and-adress">
-          <a class="logo" href="">Web<span class="logo__white">Studio</span></a>
-          <address class="address">
-            <ul class="adress__list">
-              <li class="adress__item">
-                <a href="" class="link-town">м. Київ, пр-т Лесі Українки, 26</a>
+        <div class="footer__block-logo-adress-and-icon">
+
+          <div class="footer__block-logo-and-adress">
+            <a class="logo" href="">Web<span class="logo__white">Studio</span></a>
+            <address class="address">
+              <ul class="adress__list">
+                <li class="adress__item">
+                  <a href="" class="link-town">м. Київ, пр-т Лесі Українки, 26</a>
+                </li>
+                <li class="adress__item">
+                  <a href="" class="contacts__link-mailphone mail">info@devstudio.com</a>
+                </li>
+                <li class="adress__item">
+                  <a href="" class="contacts__link-mailphone phone">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+
+          <div class="footer__block-icons">
+            <strong class="accent">Приєднуйтесь</strong>
+            <ul class="footer__list-icons">
+              <li>
+                <a class="footer__list-link" href="">
+                  <svg class="footer__icons">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="adress__item">
-                <a href="" class="contacts__link-mailphone mail">info@devstudio.com</a>
+              <li>
+                <a class="footer__list-link" href="">
+                  <svg class="footer__icons">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="adress__item">
-                <a href="" class="contacts__link-mailphone phone">+38 096 111 11 11</a>
+              <li>
+                <a class="footer__list-link" href="">
+                  <svg class="footer__icons">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a class="footer__list-link" href="">
+                  <svg class="footer__icons">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
+          </div>
         </div>
-
-        <div class="footer__block-icons">
-          <strong class="accent">Приєднуйтесь</strong>
-          <ul class="footer__list-icons">
-            <li>
-              <a class="footer__list-link" href="">
-                <svg class="footer__icons">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a class="footer__list-link" href="">
-                <svg class="footer__icons">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a class="footer__list-link" href="">
-                <svg class="footer__icons">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a class="footer__list-link" href="">
-                <svg class="footer__icons">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-
 
 
 
@@ -536,6 +538,8 @@
           <p class="form-footer__paragraph">Підпишіться на розсилку</p>
 
           <div class="form-footer__block-field-button">
+
+
 
 
             <div class="form-footer__block-field">
@@ -557,7 +561,7 @@
     </div>
 
 
-  </footer>
+  </footer> -->
 
 </body>
 
